2005-02-27  Chris Burdess  <dog@gnu.org>

	* gnu/xml/aelfred2/JAXPFactory.java,
	  gnu/xml/aelfred2/SAXDriver.java,
	  gnu/xml/aelfred2/XmlParser.java,
	  gnu/xml/aelfred2/XmlReader.java: Applied GNU Classpath source code
	formatting conventions. Replaced arrays of Object with struct-like
	classes for easier maintainability. Made SAXDriver.stringInterning
	package private to allow access from XmlParser inside the loop without
	a method call overhead.

2005-02-27  Roman Kennke  <roman@ontographics.com>

	* javax/swing/plaf/basic/BasicListUI:
	make BasicListUI capable of wrapping lists
	(layoutOrientation property of javax.swing.JList)

2005-02-26  Audrius Meskauskas  <audriusa@bluewin.ch>

	* javax/swing/Timer.java: documenting and some
          formatting.	
        
2005-02-26  Audrius Meskauskas  <audriusa@bluewin.ch>

	* javax/swing/JTextArea.java (replaceRange): 
        Fixing doc.remove(start, length) misinterpretation.
	
2005-02-26  Roman Kennke  <roman@ontographics.com>

	* javax/swing/plaf/basic/BasicListUI
	(updateLayoutState,paint): make BasicListUI aware of the
	width of the rendered JList

2005-02-25  Mark Wielaard  <mark@klomp.org>

	* NEWS: Add 0.14 release date.
	* configure.ac: Set version to 0.14.

2005-02-25  Sven de Marothy  <sven@physto.se>

	* java/net/InetAddress.java
	(toString): Don't print empty hostnames.
	Fixes bug #11956

2005-02-24  Mark Wielaard  <mark@klomp.org>

	* doc/www.gnu.org/Makefile (SUBDIRS): Add cp-tools.
	* doc/www.gnu.org/cp-tools/Makefile: New file.
	* doc/www.gnu.org/cp-tools/cp-tools.wml: Likewise.
	* doc/www.gnu.org/cp-tools/texidoclet.html: Likewise.

2005-02-24  Audrius Meskauskas  <audriusa@bluewin.ch>

	* javax/swing/Timer.java (constructor): assigning initialDelay

2005-02-24  Audrius Meskauskas  <audriusa@bluewin.ch>
   
	* javax/swing/Timer.java (Waker.run): firing the first action
	event.

2005-02-24  Chris Burdess  <dog@gnu.org>

	* BASE64.java: Truncate encoded byte array.
